# MatrixA2D

./: CMakeLists.txt
engine/core/: Engine.cpp  Engine.h
engine/entities/: Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Player.cpp  Player.h
engine/resources/: inventory.cpp  inventory.h
engine/world/: Camera.cpp  Camera.h  LevelManager.cpp  LevelManager.h  levelLoader.cpp  levelLoader.h  pathfindingA.cpp  pathfindingA.h
game/: MatrixA2D.cpp  MatrixA2D.h  main.cpp
resources/maps/: forest_map.tmx  forest_map_camp.tmx  town_0_map.tmx
src/: enemies.h  entity.h  game.h  inventory.h  level.h  main.cpp  map.h  pathfindingA.h  player.h  resurce_init.h  view.h
